Fixed an layout issue and a text wrapping issue

--- a/client/src/style/chatRoom.sass
+++ b/client/src/style/chatRoom.sass
@@ -5,10 +5,16 @@
     align-items: center
     flex-grow: 1
     justify-content: space-between
-    
-//Wrapper and a speech balloon to contain chat massages
+
 .chat-msg__container
+    max-height: 100%
+    overflow: scroll
+
+    
+//Wrapper and a speech balloon which contains chat massages
+.chat-msg__container-shape
     width: 100%
+    height: 0
     position: relative
     flex-grow: 1
     max-width: 510px
@@ -20,7 +26,7 @@
     background-color: #FAFAFA
     border: 1px solid #979797
  
-.chat-msg__container::before
+.chat-msg__container-shape::before
     content: ""
     position: absolute
     z-index: 256
@@ -30,7 +36,7 @@
     display: inline-block
     border-color: #FAFAFA transparent transparent transparent
 
-.chat-msg__container::after
+.chat-msg__container-shape::after
     content: ""
     position: absolute
     z-index: 255
@@ -39,6 +45,7 @@
     border: solid 20px
     display: inline-block
     border-color: #aba8a8 transparent transparent transparent
+
 
 //Wrapper for the entire chat page 
 .chat-page__wrapper
@@ -95,6 +102,7 @@
 .speech-balloon__text
     margin: 0
     font-size: 1.2rem
+    white-space: pre-line
 
 .status-bar
     height: 33px
