--- a/client/src/style/style.sass
+++ b/client/src/style/style.sass
@@ -14,4 +14,5 @@ body
 .site-header
     width: 100%
     height: 45.5px
+    flex-shrink: 0
     border-bottom: 1px solid #979797
